<resources>
    <string name="app_name">Taraji</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallerie photo</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="live">live</string>

    <string name="musique">Taraji Music</string>
    <string name="by">BY</string>
    <string name="inscri">Inscrivez-vous !</string>
    <string name="simtittle">Je comande ma SIM TM</string>
    <string name="hintnom">Nom et prenom</string>
    <string name="hintfirstname">nom</string>
    <string name="hintlastname">prenom</string>
    <string name="hintcurrentnum">votre numero mobile actuel</string>
    <string name="hintnum">Numero</string>
    <string name="hintemail">Email</string>
    <string name="hintpass">mot de passe</string>
    <string name="acceptterms">j\'accepte les condition d\'utilistaion</string>
    <string name="btninscri">Inscription</string>
    <string name="btnvalider">Valider</string>
    <string name="loginlink">Deja inscrit? se connecter</string>
    <string name="connecttitle">Je me connect</string>
    <string name="forgetpasslink">Mot de passe oublie</string>
    <string name="stayconnectswitcher">Rester connecter</string>
    <string name="connectbtn">Connexion</string>
    <string name="createaccountlink">Vous n\'avez pas de compte?créer un nouveau</string>
    <string name="videntrainment">Video entrainement</string>
    <string name="pictmenu">Taswirti</string>
    <string name="jeumenu">Dawer Werba7</string>
    <string name="formationmenu">7ot Tachkila</string>
    <string name="notemenu">Noti jouerette</string>
    <string name="tmobilemenu">Taraji Mobile store</string>
    <string name="aboutmenu">A propos</string>
    <string name="livemenu">Live Streaming</string>
    <string name="appvesrion">Taraji Mobile-version 1.01</string>
    <string name="soonmatch">Match à venir</string>
    <string name="classementligue">Classement ligue 1</string>
    <string name="j">J</string>
    <string name="g">G</string>
    <string name="n">N</string>
    <string name="p">P</string>
    <string name="bp">Bp</string>
    <string name="music_title">Taraji music</string>
    <string name="rating_title">Noti Jouertte</string>
    <string name="gallery_title">Galerie Photos</string>
    <string name="profile_title">Mon Profil</string>
    <string name="portabilite_title">Je procède à la portabilite</string>
    <string name="cellue_title">Cellule des Suppoters Taraji By TM</string>
    <string name="contact_title">Contactez-nous</string>
    <string name="store_title">Taraji Mobile Store</string>
    <string name="contact_description">Taraji Mobile App </string>
    <string name="howtojoincommunity">Commentre joindre la comunauté</string>
    <string name="cellue_descreption">Rejoinez la cellule des supporters Taraji By Taraji Mobile et bénéfeciez de plusieurs avantages :</string>
    <string name="music_description">Ecoutez les meilleurs chansons du Taraji !</string>
    <string name="rating_description">Evaluez les joueurs les matches !</string>
    <string name="gallery_description">Seance d\'entrainement 26-10-2020 </string>
    <string name="mobilelabel">Mobile :</string>
    <string name="adresslabel">Adresse :</string>
    <string name="websitelabel">Site Web :</string>
    <string name="maillabel">Email :</string>
    <string name="mobilecontact">92 449 448</string>
    <string name="adresscontact">Résidence Yousr - Ennas2 - Tunis</string>
    <string name="websitecontact">www.trajimobile.com.tn</string>
    <string name="mailcontact">contact@trajimobile.com.tn</string>
    <string name="cellulebenifit1">Accés au live Streaming</string>
    <string name="cellulebenifit2">Jeux &amp; cadeau</string>
    <string name="cellulebenifit3">Reduction sur les produits Taraji</string>
    <string name="simchoice1">Je commande ma SIM Taraji Mobile</string>
    <string name="simchoice2">Je fais une portabilite de numero</string>
    <string name="simproducttitle">Sim Taraji Mobile</string>



</resources>