<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.login">
    <data>
         </data>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/backgroundred"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:src="@drawable/tarajimobile"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connecttitle"
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:layout_gravity="left"
                android:textSize="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextborder"
                android:hint="@string/hintnum"
                android:padding="3dp"
                android:inputType="number"
                android:layout_marginBottom="10dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextborder"
                android:hint="@string/hintpass"
                android:padding="3dp"
                android:inputType="textPassword"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetpasslink"
                    android:textColor="@color/yellow"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/stayconnectswitcher"/>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/se_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connectbtn"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                android:padding="3dp"
                />


        </LinearLayout>


        <TextView
            android:id="@+id/CreeCompte"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createaccountlink"
            android:textColor="@color/yellow"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
</layout>