<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragement.cellue.CellueFragment"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textSize="20dp"
                android:text="@string/cellue_title"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:text="@string/cellue_descreption"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/youtube"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:layout_gravity="center"
                        android:text="@string/cellulebenifit1"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/giftbox"
                        android:layout_gravity="left"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:text="@string/cellulebenifit2"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/coupon"
                        android:layout_gravity="left"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:text="@string/cellulebenifit3"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow"
                    android:textSize="20dp"
                    android:text="@string/howtojoincommunity"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                   >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/iconsim"/>

                        <RadioGroup
                            android:id="@+id/choicegroup"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:orientation="vertical">
                            <RadioButton
                                android:id="@+id/choice1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/simchoice1"
                                android:textColor="@color/white"
                                android:padding="0dp"
                                android:layout_marginTop="-10dp"/>
                            <RadioButton
                                android:id="@+id/choice2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/simchoice2"
                                android:textColor="@color/white"
                                android:layout_marginTop="-10dp"/>
                        </RadioGroup>


                </LinearLayout>
                <Button
                    android:id="@+id/join_choice"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/btnvalider"
                    android:backgroundTint="@color/yellow"
                    />



            </LinearLayout>


        </LinearLayout>
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/tarajimobile"
            android:layout_gravity="center"/>
    </LinearLayout>

</FrameLayout>